[package]
name = "gha-runner"
version = "0.1.0"
authors = ["Robert O'Callahan <roc@pernos.co>"]
description = "Run Github Actions workflows locally or on a custom backend"
documentation = "https://docs.rs/gha-runner"
homepage = "https://pernos.co"
edition = "2018"
repository = "https://github.com/Pernosco/gha-runner"
readme = "README.md"
keywords = ["github", "actions"]
categories = ["development-tools", "development-tools::testing"]
license-file = "LICENSE"

[patch.crates-io]
octocrab = { git = "https://github.com/Pernosco/octocrab", branch = "master" }

[dependencies]
backtrace = "0.3"
futures = "0.3"
hex = "0.4"
linked-hash-map = { version = "0.5", features = [ "serde_impl" ] }
log = "0.4"
octocrab = { version = "0.25", default-features = false, features = ["rustls", "rustls-webpki-tokio"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3"
tokio = { version = "1", features = ["process", "macros", "rt"] }
url = "2"
yaml-rust = "0.4"

[dev-dependencies]
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
